--- a/Film/film.html
+++ b/Film/film.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Camera</title>
-    <link rel="stylesheet" href="css/history.css">
+    <link rel="stylesheet" href="css/film.css">
     <script src="https://www.itxst.com/package/vue/vue.min.js"></script>
     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <div id="historyDiv">
-        <div id="historyTitle">PIXAR历史发展</div>
+    <div id="filmDiv">
+        <div id="filmTitle">PIXAR电影</div>
         <div class="swiper-list-card swiper-list">	
             <div class="swiper-main-card swiper-main">123</div>
             <img id="prev-card" class="leftBtn" src="css/left.png" alt="">
@@ -25,6 +25,6 @@
 
     </div>
 </body>
-<script src=js/history.js></script>
+<script src=js/film.js></script>
 
 </html>
