修改函数名

--- a/Film/film.html
+++ b/Film/film.html
@@ -17,8 +17,8 @@
 <body>
     <div id="filmDiv">
         <div id="filmTitle">PIXAR电影</div>
-        <div class="swiper-list-card swiper-list">	
-            <div class="swiper-main-card swiper-main">123</div>
+        <div class="mainboard-list-card mainboard-list">	
+            <div class="mainboard-main-card mainboard-main">123</div>
             <img id="prev-card" class="leftBtn" src="css/left.png" alt="">
             <img id="next-card" class="rightBtn" src="css/right.png" alt="">
         </div>
