--- a/Film/film.html
+++ b/Film/film.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Camera</title>
+    <title>Film</title>
     <link rel="stylesheet" href="css/film.css">
     <script src="https://www.itxst.com/package/vue/vue.min.js"></script>
     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
