声音全部添加完成（待调整音量

--- a/people/people.html
+++ b/people/people.html
@@ -13,14 +13,14 @@
 
 <body>
     <div id="peopleDiv">
-        <div id="peopleTitle">PIXAR电影中的<br>经典人物</div>
+        <div id="peopleTitle">PIXAR电影经典人物<br><span style="font-size: 4vh;">点击会说话的哦</span></div>
         <div id="peopleMain">
-            <div id="q"><img id="peoplePic" src="css/toyStory.png" onclick="javascript:playIt()"> </div>
-            <div id="q"><img id="peoplePic" src="css/monster.png" alt=""></div>
-            <div id="q"><img id="peoplePic" src="css/sea.png" alt=""></div>
-            <div id="q"><img id="peoplePic" src="css/car.png" alt=""></div>
-            <div id="q"><img id="peoplePic" src="css/coco.png" alt=""></div>
-            <div id="q"><img id="peoplePic" src="css/Incredibles.png" alt=""></div>
+            <div id="q"><img id="peoplePic" src="css/toyStory.png" onclick="javascript:playToy()"> </div>
+            <div id="q"><img id="peoplePic" src="css/monster.png" onclick="javascript:playMonster()"></div>
+            <div id="q"><img id="peoplePic" src="css/sea.png" onclick="javascript:playSea()"></div>
+            <div id="q"><img id="peoplePic" src="css/car.png" onclick="javascript:playCar()"></div>
+            <div id="q"><img id="peoplePic" src="css/coco.png" onclick="javascript:playCoco()"></div>
+            <div id="q"><img id="peoplePic" src="css/Incredibles.png" onclick="javascript:playIncredibles()"></div>
         </div>
     </div>
 </body>
