--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>people</title>
+    <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="people/css/people.css">
     <script src="https://www.itxst.com/package/vue/vue.min.js"></script>
     <script src="FirstPage/dist/jquery-3.6.0.js"></script>
@@ -16,9 +17,11 @@
     <!-- 第一页 -->
     <iframe style="height: 100vh;width: 100vw; border: 0px;" src="./FirstPage/dist/FirstPage.html"></iframe>
     <!-- 电影 -->
-    <iframe style="height: 100vh;width: 100vw; border: 0px;" src="./Film/film.html"></iframe>
+    <iframe style="height: 102vh;width: 100vw; border: 0px;" src="./Film/film.html"></iframe>
     <!-- 人物 -->
-    <iframe style="height: 100vh;width: 100vw; border: 0px;" src="./people/people.html"></iframe>
+    <iframe style="height: 102vh;width: 100vw; border: 0px;" src="./people/people.html"></iframe>
+    <!-- 获得奖项 -->
+    <iframe style="height: 102vh;width: 100vw; border: 0px;" src="./Popcorn/index.html"></iframe>
 
 </body>
 
