--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <body>
     <!-- 第一页 -->
-    <iframe style="height: 100vh;width: 100vw; border: 0px;" src="./FirstPage/dist/FirstPage.html"></iframe>
+    <iframe style="height: 102vh;width: 100vw; border: 0px;" scrolling="auto" src="./FirstPage/dist/FirstPage.html"></iframe>
     <!-- 电影 -->
-    <iframe style="height: 102vh;width: 100vw; border: 0px;" src="./Film/film.html"></iframe>
+    <iframe style="height: 102vh;width: 100vw; border: 0px;" scrolling="no" src="./Film/film.html"></iframe>
     <!-- 人物 -->
-    <iframe style="height: 102vh;width: 100vw; border: 0px;" src="./people/people.html"></iframe>
+    <iframe style="height: 102vh;width: 100vw; border: 0px;" scrolling="no" src="./people/people.html"></iframe>
     <!-- 获得奖项 -->
-    <iframe style="height: 102vh;width: 100vw; border: 0px;" src="./Popcorn/index.html"></iframe>
+    <iframe style="height: 102vh;width: 100vw; border: 0px;" scrolling="no" src="./Popcorn/index.html"></iframe>
 
 </body>
 
