--- a/index.html
+++ b/index.html
@@ -12,23 +12,14 @@
 </head>
 
 <body>
-    <!-- 第一页 -->
-    <div id='FirstPage'>
-        <section id="beginning-section">
-          <video src="./FirstPage/dist/1.mp4" id='video' muted playsinline autoplay loop></video>
-          <h1>
-            Are You Ready To Know About PIXAR？
-          </h1>
-          <img src='./FirstPage/dist/textbg.png' id='text-bg'>
-          <img src='./FirstPage/dist/title.png' id='title'>
-        </section>
-      </div>
+    <!-- 第一页 -->  
+    <iframe style="height: 102vh;width: 100vw;" frameborder="0" src="./FirstPage/dist/FirstPage.html" ></iframe>
     <!-- 电影 -->
-    <iframe style="height: 102vh;width: 100vw; border: 0px;" scrolling="no" src="./Film/film.html"></iframe>
+    <iframe style="height: 102vh;width: 100vw;" frameborder="0" scrolling="no" src="./Film/film.html"></iframe>
     <!-- 人物 -->
-    <iframe style="height: 102vh;width: 100vw; border: 0px;" scrolling="no" src="./people/people.html"></iframe>
+    <iframe style="height: 102vh;width: 100vw;" frameborder="0" scrolling="no" src="./people/people.html"></iframe>
     <!-- 获得奖项 -->
-    <iframe style="height: 102vh;width: 100vw; border: 0px;" scrolling="no" src="./Popcorn/index.html"></iframe>
+    <iframe style="height: 102vh;width: 100vw;" frameborder="0" scrolling="no" src="./Popcorn/index.html"></iframe>
     <script src="./FirstPage/dist/script.js"></script>
 
 </body>
