--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>people</title>
+    <title>PIXAR</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./FirstPage/dist/style.css">
     <script src="https://www.itxst.com/package/vue/vue.min.js"></script>
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-    <!-- 第一页 -->  
-    <iframe style="height: 102vh;width: 100vw;" frameborder="0" src="./FirstPage/dist/FirstPage.html" ></iframe>
+    <!-- 第一页 -->
+    <iframe name="FirstPage" style=" height: 102vh;width: 100vw;" frameborder="0" src="./FirstPage/dist/FirstPage.html"></iframe>
     <!-- 电影 -->
-    <iframe style="height: 102vh;width: 100vw;" frameborder="0" scrolling="no" src="./Film/film.html"></iframe>
+    <iframe style="height: 102vh;width: 99vw;" frameborder="0" src="./Film/film.html"></iframe>
     <!-- 人物 -->
-    <iframe style="height: 102vh;width: 100vw;" frameborder="0" scrolling="no" src="./people/people.html"></iframe>
+    <iframe style="height: 102vh;width: 99vw;" frameborder="0" scrolling="no" src="./people/people.html"></iframe>
     <!-- 获得奖项 -->
-    <iframe style="height: 102vh;width: 100vw;" frameborder="0" scrolling="no" src="./Popcorn/index.html"></iframe>
+    <iframe style="height: 102vh;width: 99vw;" frameborder="0" scrolling="no" src="./Popcorn/index.html"></iframe>
     <script src="./FirstPage/dist/script.js"></script>
 
 </body>
