--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <title>PIXAR</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./FirstPage/dist/style.css">
-    <script src="https://www.itxst.com/package/vue/vue.min.js"></script>
+    <!-- <script src="https://www.itxst.com/package/vue/vue.min.js"></script> -->
     <script src="FirstPage/dist/jquery-3.6.0.js"></script>
-    <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
+    <!-- <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script> -->
 </head>
 
 <body>
     <!-- 第一页 -->
-    <iframe name="FirstPage" style=" height: 102vh;width: 100vw;" frameborder="0" src="./FirstPage/dist/FirstPage.html"></iframe>
+    <iframe name="FirstPage" style=" height: 100vh;width: 100vw;padding: 0;margin: 0;border: 0;" frameborder="0" src="./FirstPage/dist/FirstPage.html"></iframe>
     <!-- 电影 -->
-    <iframe style="height: 102vh;width: 99vw;" frameborder="0" src="./Film/film.html"></iframe>
+    <iframe style="height: 100vh;width: 99vw;" frameborder="0" src="./Film/film.html"></iframe>
     <!-- 人物 -->
-    <iframe style="height: 102vh;width: 99vw;" frameborder="0" scrolling="no" src="./people/people.html"></iframe>
+    <iframe style="height: 100vh;width: 99vw;" frameborder="0" scrolling="no" src="./people/people.html"></iframe>
     <!-- 获得奖项 -->
-    <iframe style="height: 102vh;width: 99vw;" frameborder="0" scrolling="no" src="./Popcorn/index.html"></iframe>
+    <iframe style="height: 100vh;width: 99vw;" frameborder="0" scrolling="no" src="./Popcorn/index.html"></iframe>
     <script src="./FirstPage/dist/script.js"></script>
 
 </body>
