--- a/Popcorn/index.html
+++ b/Popcorn/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <title>Camera</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://www.itxst.com/package/vue/vue.min.js"></script>
+    <!-- <script src="https://www.itxst.com/package/vue/vue.min.js"></script> -->
     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-    <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
+    <!-- <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script> -->
 </head>
 
 <body>
