--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <iframe style="height: 100vh;width: 100vw;" frameborder="0" scrolling="no" src="./people/people.html"></iframe>
     <!-- 获得奖项 -->
     <iframe style="height: 100vh;width: 100vw;" frameborder="0" scrolling="no" src="./Popcorn/index.html"></iframe>
-    <script src="./FirstPage/dist/script.js"></script>
+    <!-- 尾页 -->
+    <iframe style="height: 100vh;width: 100vw;" frameborder="0" src="./EndPage/EndPage.html"></iframe>
 
 </body>
 
