底部小人动画

--- a/EndPage/EndPage.html
+++ b/EndPage/EndPage.html
@@ -16,8 +16,7 @@ PIXAR set off with a lamp named LUXO, <br>and create a PIXAR universe.
 <div id='second'>
 Everyone sets off with sparkling passion,<br> heads towards their own infinite possibilities.
 </div>
-  <script src="./EndPage.js"></script>
-
+<img src=../bottom.png>
 </body>
 
 </html>
