--- a/Film/film.html
+++ b/Film/film.html
@@ -63,6 +63,7 @@
             </div>
         </div>
     </div>
+    <img src='../bottom.png' id='bottomImg'>
 </body>
 <script src=js/film.js></script>
 
