--- a/people/people.html
+++ b/people/people.html
@@ -42,5 +42,6 @@
             <img id="introduce" src="./css/toyIn.jpg">
         </div>
     </div>
+    <img src='../bottom.png' id='bottomImg'>
 </body>
 </html>
