人物图片全部上传完成

--- a/people/people.html
+++ b/people/people.html
@@ -24,22 +24,22 @@
             <div id="q"><img id="peoplePic" class="Incredibles" src="./css/Incredibles.png" onclick="javascript:playIncredibles()"></div>
         </div>
         <div id="peopleDescribe" class="toyDe peopleClose">
-                <img id="introduce" src="./css/toyIn.jpg">
+                <img id="introduce" src="./css/1.jpg">
         </div>
         <div id="peopleDescribe" class="monsterDe peopleClose">
-            <img id="introduce" src="./css/toyIn.jpg">        
+            <img id="introduce" src="./css/2.jpg">        
         </div>
         <div id="peopleDescribe" class="seaDe peopleClose">
-            <img id="introduce" src="./css/toyIn.jpg">
+            <img id="introduce" src="./css/3.jpg">
         </div>
         <div id="peopleDescribe" class="carDe peopleClose">
-            <img id="introduce" src="./css/toyIn.jpg">
+            <img id="introduce" src="./css/4.jpg">
         </div>
         <div id="peopleDescribe" class="cocoDe peopleClose">
-            <img id="introduce" src="./css/toyIn.jpg">
+            <img id="introduce" src="./css/5.jpg">
         </div>
         <div id="peopleDescribe" class="IncrediblesDe peopleClose">
-            <img id="introduce" src="./css/toyIn.jpg">
+            <img id="introduce" src="./css/6.jpg">
         </div>
     </div>
     <img src='../bottom.png' id='bottomImg'>
