--- a/timeLine/timeline.html
+++ b/timeLine/timeline.html
@@ -562,5 +562,7 @@
             <p>《心灵奇旅》《二分之一的魔法》上映，由于疫情原因2月25日才经Disney+发布流媒体，只在没有流媒体的国家影院上映。</p>
         </div>
     </div>
+
+    <img src="../bottom.png" id='bottomImg'>
     <script src="./js/timeline.js"></script>
 </body>
