--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <!-- 尾页 -->
     <iframe id="end" style="height: 100vh;width: 100vw;" frameborder="0" src="./EndPage/EndPage.html"></iframe>
     <div id="pilot">
-        <div id="dot" onclick="javascript:jumpFrist()" ></div>
-        <div id="dot" onclick="javascript:jumpHistory()" ></div>
-        <div id="dot" onclick="javascript:jumpFilm()" ></div>
-        <div id="dot" onclick="javascript:jumpPeople()"></div>
-        <div id="dot" onclick="javascript:jumpAward()" ></div>
-        <div id="dot" onclick="javascript:jumpEnd()" ></div>
+        <div class="dot" id="q" onclick="javascript:jumpFrist()" ></div>
+        <div class="dot" id="w" onclick="javascript:jumpHistory()" ></div>
+        <div class="dot" id="e" onclick="javascript:jumpFilm()" ></div>
+        <div class="dot" id="r" onclick="javascript:jumpPeople()"></div>
+        <div class="dot" id="t" onclick="javascript:jumpAward()" ></div>
+        <div class="dot" id="y" onclick="javascript:jumpEnd()" ></div>
     </div>
 </body>
 
