--- a/people/people.html
+++ b/people/people.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="peopleDiv">
-        <div id="peopleTitle">PIXAR电影经典人物</div>
+        <div id="peopleTitle">C h a r a c t e r s</div>
         <div id="peopleMain">
             <div id="q"><img id="peoplePic" class="toy" src="./css/toyStory.png" onclick="javascript:playToy()"> </div>
             <div id="q"><img id="peoplePic" class="monster" src="./css/monster.png" onclick="javascript:playMonster()"></div>
