--- a/timeLine/timeline.html
+++ b/timeLine/timeline.html
@@ -10,19 +10,20 @@
 </head>
 
 <body>
+    <h1>H i s t o r y</h1>
     <button class="scroll"id="right"><svg class="icon" aria-hidden="true">
         <use xlink:href="#icon-jiantou-you"></use>
       </svg></button>
         <button class="scroll"id="left"><svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-jiantou-zuo"></use>
           </svg></button>
-        
+          <img src='./css/1.png' id='timeline'>  
+
     <div class="display">
         <div class="item">
             <div class="year">
-                <h2>1986</h2>
             </div>
-            <div class="pictures" style="top: 25vh;">
+            <div class="pictures" style="top: 15vh;">
                 <div class="pictureBox">
                     <div class="pictureboder">
                         <img src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1575415413633-OCAV56T07VFJC2CY0OH3/lux.jpg?format=750w">
@@ -46,9 +47,6 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>1995</h2>
-            </div>
             <div class="pictures" >
                 <div class="pictureBox">
                     <div class="pictureboder">
@@ -69,9 +67,6 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>1998</h2>
-            </div>
             <div class="pictures">
                 <div class="pictureBox">
                     <div class="pictureboder">
@@ -97,9 +92,6 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2001</h2>
-            </div>
             <div class="pictures">
                 <div class="pictureBox">
                     <div class="pictureboder">
@@ -120,9 +112,6 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2003</h2>
-            </div>
             <div class="pictures">
                 <div class="pictureBox">
                     <div class="pictureboder">
@@ -147,9 +136,6 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2004</h2>
-            </div>
             <div class="pictures">
                 <div class="pictureBox">
                     <div class="pictureboder">
@@ -161,12 +147,12 @@
                         <img src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1575481408422-GV7K4FN1G035JEKMH1YF/bound2.jpg?format=1000w">
                     </div>
                 </div>
-                <div class="pictureBox">
+                <div class="pictureBox" style="top:2vh">
                     <div class="pictureboder">
                         <img src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1469058370425-TZMZ8I0YQC3MVZ2A04Y5/image-asset.jpeg?format=1500w">
                     </div>
                 </div>
-                <div class="pictureBox">
+                <div class="pictureBox"  style="top:2vh">
                     <div class="pictureboder">
                         <img src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1575481345531-T6KP46VGQV0Q02IMHTKJ/inc2.jpg?format=1500w">
                     </div>
@@ -174,9 +160,6 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2006</h2>
-            </div>
             <div class="pictures">
                 <div class="pictureBox">
                     <div class="pictureboder">
@@ -188,12 +171,12 @@
                         <img src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1575481549014-SCAXYFY8LCS0Y599FF90/carse.jpg?format=1000w">
                     </div>
                 </div>
-                <div class="pictureBox">
+                <div class="pictureBox"  style="top:2vh">
                     <div class="pictureboder">
                         <img src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1575486475545-948YA7J81LFX1MHSB74Q/carsb.jpg?format=750w">
                     </div>
                 </div>
-                <div class="pictureBox">
+                <div class="pictureBox"  style="top:2vh">
                     <div class="pictureboder">
                         <img src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1575481562394-BFPLC6Y7FKS57OM53WMM/omb1.jpg?format=1500w">
                     </div>
@@ -201,9 +184,6 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2007</h2>
-            </div>
             <div class="pictures">
                 <div class="pictureBox">
                     <div class="pictureboder">
@@ -229,10 +209,7 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2008</h2>
-            </div>
-            <div class="pictures" style="top:26%">
+            <div class="pictures">
                 <div class="pictureBox">
                     <div class="pictureboder">
                         <img src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1470687894052-GXP7M2V7YMEKUO4PRJ4M/09_walle.jpg?format=500w">
@@ -257,9 +234,6 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2009</h2>
-            </div>
             <div class="pictures"style="top:29%">
                 <div class="blank"style="height:5vh;"></div>
                 <div class="pictureBox">
@@ -280,9 +254,6 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2012</h2>
-            </div>
             <div class="pictures">
                 <div class="pictureBox">
                     <div class="pictureboder">
@@ -308,9 +279,6 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2013</h2>
-            </div>
             <div class="pictures">
                 <div class="pictureBox">
                     <div class="pictureboder">
@@ -341,9 +309,6 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2015</h2>
-            </div>
             <div class="pictures">
                 <div class="pictureBox">
                     <div class="blank"style="height:3vh;"></div>
@@ -364,10 +329,7 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2016</h2>
-            </div>
-            <div class="pictures" style="top:25vh">
+            <div class="pictures" style="top:15vh">
                 <div class="pictureBox">
                     <div class="pictureboder">
                         <img src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1575482835903-FGDMS474UIPNSR1014MW/dory.jpg?format=500w">
@@ -386,9 +348,6 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2017</h2>
-            </div>
             <div class="pictures">
                 <div class="pictureBox">
                     <div class="pictureboder">
@@ -413,13 +372,10 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2018</h2>
-            </div>
-            <div class="pictures"style="top:25vh">
-                <div class="blank"style="height:0.75vh;"></div>
+            <div class="pictures" style="top:15vh">
+                <div class="blank" style="height:0.75vh;"></div>
                 <div class="pictureBox">
-                    <div class="pictureboder">
+                    <div class="pictureboder" >
                         <img src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1575486144030-Q28V7BJQAMNT9KE7AGW0/i2_poster.jpg?format=1000w">
                     </div>
                 </div>
@@ -441,9 +397,6 @@
             </div>
         </div>
         <div class="item">
-            <div class="year">
-                <h2>2019</h2>
-            </div>
             <div class="pictures">
                 <div class="pictureBox">
                     <div class="pictureboder">
@@ -468,11 +421,8 @@
                 </div>
             </div>
         </div>
-        <div class="item">
-            <div class="year">
-                <h2>2020</h2>
-            </div>
-            <div class="pictures"style="top:18vh">
+        <div class="item" style="top: -5vh;">
+            <div class="pictures">
                 <div class="pictureBox">
                     <div class="pictureboder">
                         <img src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1583509959252-CIL09QTUVPXKDD17YZ5S/1051083-onwardianbarley-1280.jpg?format=500w">
