--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <img src="./team.png" id="team" alt="">
+    <!-- <img src="./team.png" id="team" alt=""> -->
     <!-- 第一页 -->
     <iframe id="first" name="FirstPage" style=" height: 100vh;width: 100vw;padding: 0;margin: 0;border: 0;" frameborder="0" src="./FirstPage/dist/FirstPage.html"></iframe>
     <!-- 历史 -->
