--- a/timeLine/timeline.html
+++ b/timeLine/timeline.html
@@ -12,10 +12,10 @@
 <body>
     <h1>H i s t o r y</h1>
     <button class="scroll"id="right"><svg class="icon" aria-hidden="true">
-        <use xlink:href="#icon-jiantou-you"></use>
+        <use xlink:href="#icon-07jiantouxiangyou"></use>
       </svg></button>
         <button class="scroll"id="left"><svg class="icon" aria-hidden="true">
-            <use xlink:href="#icon-jiantou-zuo"></use>
+            <use xlink:href="#icon-07jiantouxiangzuo"></use>
           </svg></button>
           <img src='./css/1.png' id='timeline'>  
 
