--- a/Film/film.html
+++ b/Film/film.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="filmDiv">
-        <div id="filmTitle">S e r i e s</div>
+        <div id="filmTitle">F i l m s</div>
         <div class="mainboard-list-card mainboard-list">	
             <div class="mainboard-main-card mainboard-main"></div>
             <img id="prev-card" class="leftBtn" src="./css/left.png" alt="">
