修改小部分readme

--- a/EndPage/EndPage.html
+++ b/EndPage/EndPage.html
@@ -14,7 +14,7 @@ PIXAR set off with a lamp named LUXO, <br>and create a PIXAR universe.
 </div>
 <div style="height: 60px;"></div>
 <div id='second'>
-Everyone sets off with sparkling passion,<br> heads towards their own infinite possibilities.
+Everyone sets off with sparkling passion,<br>and heads towards their own infinite possibilities.
 </div>
 <img src=../bottom.png>
 </body>
