修改文件储存位置

--- a/EndPage/EndPage.html
+++ b/EndPage/EndPage.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <title>End Page of PIXAR</title>
-  <link rel="stylesheet" href="./EndPage.css">
-  <script src='./jquery-3.6.0.js'></script>
+  <link rel="stylesheet" href="./css/EndPage.css">
+  <script src='./js/jquery-3.6.0.js'></script>
 </head>
 
 <body>
-<div id='first'>
-PIXAR set off with a lamp named LUXO, <br>and create a PIXAR universe.
-</div>
-<div style="height: 60px;"></div>
-<div id='second'>
-Everyone sets off with sparkling passion,<br>and heads towards their own infinite possibilities.
-</div>
-<img src=../bottom.png>
+  <div id='first'>
+    PIXAR set off with a lamp named LUXO, <br>and create a PIXAR universe.
+  </div>
+  <div style="height: 60px;"></div>
+  <div id='second'>
+    Everyone sets off with sparkling passion,<br>and heads towards their own infinite possibilities.
+  </div>
+  <img src=../bottom.png>
 </body>
 
 </html>
