--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- <img src="./team.png" id="team" alt=""> -->
     <!-- 第一页 -->
-    <iframe id="first" name="FirstPage" style=" height: 100vh;width: 100vw;padding: 0;margin: 0;border: 0;" frameborder="0" src="./FirstPage/dist/FirstPage.html"></iframe>
+    <iframe id="first" name="FirstPage" style=" height: 100vh;width: 100vw;padding: 0;margin: 0;border: 0;" frameborder="0" src="./FirstPage/FirstPage.html"></iframe>
     <!-- 历史 -->
     <iframe id="history" style="height: 100vh;width: 100vw;" frameborder="0" src="./timeLine/timeline.html"></iframe>
     <!-- 电影 -->
