导航栏完成

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <title>PIXAR</title>
     <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./FirstPage/dist/style.css">
-    <script src="FirstPage/dist/jquery-3.6.0.js"></script>
+    <script src="./FirstPage/js/jquery-3.6.0.js"></script>
     <script src="index.js"></script>
 </head>
 
