--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 <body>
     <!-- <img src="./team.png" id="team" alt=""> -->
     <!-- 第一页 -->
-    <iframe id="first" name="FirstPage" style=" height: 100vh;width: 100vw;padding: 0;margin: 0;border: 0;" frameborder="0" src="./FirstPage/FirstPage.html"></iframe>
+    <iframe  style=" height: 100vh;width: 100vw;padding: 0;margin: 0;border: 0;padding: ：0;" frameborder="0" src="./FirstPage/FirstPage.html"></iframe>
     <!-- 历史 -->
-    <iframe id="history" style="height: 100vh;width: 100vw;" frameborder="0" src="./timeLine/timeline.html"></iframe>
+    <iframe  style="height: 100vh;width: 100vw;margin: 0;border: 0;padding: ：0;" frameborder="0" src="./timeLine/timeline.html"></iframe>
     <!-- 电影 -->
-    <iframe id="film" style="height: 100vh;width: 100vw;" frameborder="0" scrolling="no" src="./Film/film.html"></iframe>
+    <iframe  style="height: 100vh;width: 100vw;margin: 0;border: 0;padding: ：0;" frameborder="0" scrolling="no" src="./Film/film.html"></iframe>
     <!-- 人物 -->
-    <iframe id="people" style="height: 100vh;width: 100vw;" frameborder="0" scrolling="no" src="./people/people.html"></iframe>
+    <iframe  style="height: 100vh;width: 100vw;margin: 0;border: 0;padding: ：0;" frameborder="0" scrolling="no" src="./people/people.html"></iframe>
     <!-- 获得奖项 -->
-    <iframe id="award" style="height: 100vh;width: 102vw;" frameborder="0" scrolling="no" src="./Popcorn/index.html"></iframe>
+    <iframe  style="height: 100vh;width: 102vw;margin: 0;border: 0;padding: ：0;" frameborder="0" scrolling="no" src="./Popcorn/index.html"></iframe>
     <!-- 尾页 -->
-    <iframe id="end" style="height: 100vh;width: 100vw;" frameborder="0" src="./EndPage/EndPage.html"></iframe>
+    <iframe  style="height: 100vh;width: 100vw;margin: 0;border: 0;padding: ：0;" frameborder="0" src="./EndPage/EndPage.html"></iframe>
     <div id="pilot">
-        <div class="dot" id="q" onclick="javascript:jumpFrist()" ></div>
-        <div class="dot" id="w" onclick="javascript:jumpHistory()" ></div>
-        <div class="dot" id="e" onclick="javascript:jumpFilm()" ></div>
-        <div class="dot" id="r" onclick="javascript:jumpPeople()"></div>
-        <div class="dot" id="t" onclick="javascript:jumpAward()" ></div>
-        <div class="dot" id="y" onclick="javascript:jumpEnd()" ></div>
+        <div class="dot" id="q" onclick="javascript:jump(0)" ></div>
+        <div class="dot" id="w" onclick="javascript:jump(1)" ></div>
+        <div class="dot" id="e" onclick="javascript:jump(2)" ></div>
+        <div class="dot" id="r" onclick="javascript:jump(3)"></div>
+        <div class="dot" id="t" onclick="javascript:jump(4)" ></div>
+        <div class="dot" id="y" onclick="javascript:jump(5)" ></div>
     </div>
 </body>
 
