--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <body>
     <!-- <img src="./team.png" id="team" alt=""> -->
     <!-- 第一页 -->
-    <iframe  style=" height: 100vh;width: 100vw;padding: 0;margin: 0;border: 0;padding: ：0;" frameborder="0" src="./FirstPage/FirstPage.html"></iframe>
+    <iframe id="first" style=" height: 100vh;width: 100vw;padding: 0;margin: 0;border: 0;padding: 0;" frameborder="0" src="./FirstPage/FirstPage.html"></iframe>
     <!-- 历史 -->
-    <iframe  style="height: 100vh;width: 100vw;margin: 0;border: 0;padding: ：0;" frameborder="0" src="./timeLine/timeline.html"></iframe>
+    <iframe id="his" style="height: 100vh;width: 100vw;margin: 0;border: 0;padding: 0;" frameborder="0" src="./timeLine/timeline.html"></iframe>
     <!-- 电影 -->
-    <iframe  style="height: 100vh;width: 100vw;margin: 0;border: 0;padding: ：0;" frameborder="0" scrolling="no" src="./Film/film.html"></iframe>
+    <iframe id="film" style="height: 100vh;width: 100vw;margin: 0;border: 0;padding: 0 ;" frameborder="0" scrolling="no" src="./Film/film.html"></iframe>
     <!-- 人物 -->
-    <iframe  style="height: 100vh;width: 100vw;margin: 0;border: 0;padding: ：0;" frameborder="0" scrolling="no" src="./people/people.html"></iframe>
+    <iframe id="people" style="height: 100vh;width: 100vw;margin: 0;border: 0;padding: 0;" frameborder="0" scrolling="no" src="./people/people.html"></iframe>
     <!-- 获得奖项 -->
-    <iframe  style="height: 100vh;width: 102vw;margin: 0;border: 0;padding: ：0;" frameborder="0" scrolling="no" src="./Popcorn/index.html"></iframe>
+    <iframe id="award" style="height: 100vh;width: 102vw;margin: 0;border: 0;padding: 0;" frameborder="0" scrolling="no" src="./Popcorn/index.html"></iframe>
     <!-- 尾页 -->
-    <iframe  style="height: 100vh;width: 100vw;margin: 0;border: 0;padding: ：0;" frameborder="0" src="./EndPage/EndPage.html"></iframe>
+    <iframe id="end" style="height: 100vh;width: 100vw;margin: 0;border: 0;padding: 0;" frameborder="0" src="./EndPage/EndPage.html"></iframe>
     <div id="pilot">
         <div class="dot" id="q" onclick="javascript:jump(0)" ></div>
         <div class="dot" id="w" onclick="javascript:jump(1)" ></div>
