--- a/timeLine/timeline.html
+++ b/timeLine/timeline.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,300;1,700">
     <link rel="stylesheet" href="./css/timeline.css">
-    <script src="./FirstPage/js/jquery-3.6.0.js"></script>
+    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
     <script src="./js/iconfont.js"></script>
 </head>
 
